--- a/proposal/proposed.tex
+++ b/proposal/proposed.tex
@@ -60,16 +60,16 @@ Specifically, if $A$, $B$, and $C$ are related, and $A + B + C$ performs well on
 \section{Timeline}
 \begin{itemize}
   \item[Jan 2015] Get control flow recovery working on \sysname
-  \item[Feb-Mar 2016] Implement BiTR~\cite{bitr} on \sysname
+  \item[Feb-Mar 2016] Implement BiTR~\cite{bitr} on \sysname\ (paper - focused on BiTR)
   \item[Apr-May 2016] Backwards chaining with fuzzing as an example case
   \item[June 2016] Implement an existing alias analysis and implementation clean-up work
   \item[Jul-Aug 2016] Perform measurements of performance on real programs\footnote{
       I'll be testing things as I go, but at this point I will try to do a truly comprehensive measurement.
-    }
+    } (paper - focused on \sysname\ applications)
   \item[Sept 2016] Prove soundness and monotonicity\footnote{
       I intend to be working on this gradually throughout my time, but until I have a practical working model of \sysname, I do not know that the language is done evolving.
       At this point in my timeline, the language should be more or less known, and so I can finish the proofs off and work on ensuring their formal accuracy.
-    }
+    } (paper - focused on the logic on which \sysname\ is based)
   \item[Oct-Nov 2016] Writing.
   \item[Dec 2016] Presentation preparation and buffer time.
 \end{itemize}
