--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -103,7 +103,7 @@
   file = {/home/maurer/Zotero/storage/79KSUWIW/valgrind_manual.pdf}
 }
 
-@inproceedings{steensgaard_alias,
+@inproceedings{steensgaard-alias,
   title = {Points-to Analysis in Almost Linear Time},
   booktitle = {Proceedings of the 23rd {{ACM SIGPLAN}}-{{SIGACT}} Symposium on {{Principles}} of Programming Languages},
   publisher = {{ACM}},
