--- a/thesis/holmes.tex
+++ b/thesis/holmes.tex
@@ -1,28 +1,156 @@
 \chapter{Holmes}
-\section{Semantics}
-Holmes consists of several extensions off of base datalog:
+% We've argued why datalog, now argue why we want these extra features
+Holmes is a dialect of datalog, tailored with extensions for the specific use case of analyzing compiled code.
+Specifically, a normal dialect of datalog will fall short on several tools desired by the analysis author:
 \begin{itemize}
-\item External predicates
-\item Monotonic Aggregation
-\item Hypothetical Circumscription
-\item call/cc for Hypothetical Circumscription
+		%TODO expand list
+	\item Data structures
+	\item Aggregation
+	\item Negation
 \end{itemize}
-External predicates allow use of procedurally implemented analyses and functions.
-The most obvious necessity here is for access to lifters and loaders, but more uses are present in the examples.
-%TODO forward citation to example sections.
-Monotonic aggregation describes a system to efficiently allow consideration of an unordered set of facts.
-%TODO give example of use
-Hypothetical Circumscription allows us to temporarily use a closed-world hypothesis with regards to a particular match.
-It does this by allowing unique access to the largest monotonic aggregation.
-This is needed for cases where we can't know a predicate is actually complete, e.g. with a candidate successor relation.
-Adding call/cc allows the expansion of a closed-world hypothesis to include new facts by virtue of the closed world itself being a contradiction.
-This is useful for allowing the expansion of the control flow graph based on inferences from a subset graph.
 
-%TODO is minimal model where I want to start?
-I assume here the minimal model semantics of base datalog from the background, and expand upon them in each subsection to add the relevant feature.
-%TODO ref background
-I discuss what how to interpret the new feature, what properties (if any) are lost, and plausible evaluation strategies.
-\subsection{External Predicates}
+\section{Feature Selection}
+To address these lacks, we add a few features to base Datalog.
+%TODO once expanded list is there, do short "X address Y and Z, Q addresses..." blurb
+\subsection{Callbacks}
+%TODO jam widening in dataflow somewhere in here as a justification?
+% Why do we need External Predicates
+%TODO rewrite condition - "computation" too vague
+Tasks which do not involve a fixpoint, but do involve computation, can frequently be both more difficult and more expensive to write in pure datalog.
+For example, parsing an ELF and splitting it up into segments, sections, generating records for its symbols, etc. could in principle be written in datalog.
+However, this would be difficult to write (operating on a string as a linked list, or similar structure), slow to compute due to high arity joins, and would require that the input first be transformed before even entering the program.
+Other similar examples include lifting (translating a sequence of bytes into a semantics IL), concrete execution, and arithmetic.
+
+Previous approaches have noted that many of these steps come towards the beginning of analysis, and perform these tasks as a precompute phase before handing the results to datalog to process.
+In our case, we are trying specifically to avoid such phasing.
+The lifter might be needed again for previously undiscovered code.
+The loader might be needed again if we discover a call to \texttt{execve} and wish to follow it.
+Doing a phased datalog prevents the easy interleaving of these functionalities into the global fixpoint.
+
+While datalog predicates can be a great data structure, they are not always the best data structure for all tasks.
+Datalog predicates can effectively be viewed as an append-only, deduplicated, index-by-anything table.
+While this is a great data structure for many tasks, some concepts are better represented in other ways.
+One example is ILs and ASTs.
+As frequently nested, branched structures, they \emph{can} be represented in datalog, but walking one would take a very large number of lookups compared to using a traditional ADT approach, not to mention the clumsiness.
+Other similar concepts include formulae (as in SMT) and any kind of variable-length buffer representation.
+All of these can be done in pure datalog, assuming appropriate preprocessing has been done.
+However, the resulting time and space costs make this something to be avoided.
+
+To address the above two, we add the ability to register a callback to a datalog rule.
+If specified, whenever a that rule fires, the corresponding callback will be used supplementarily to determine the values to substitute into the head.
+This allows use of traditional functional or imperative style code to implement data structure transformations or perform operations which would be slow to do in the base datalog.
+Additionally, it allows us to more readily incorporate existing code (such as the BAP~\cite{bap} lifter) rather than rewriting it from scratch.
+
+This is equivalently powerful to external predicates in other languages in terms of expressivity.
+Any callback specified could instead be turned into an external predicate and simply appended to the query.
+A query involving external predicates might need to be split up into phases to be expressed in callbacks.
+If an output variable of an external predicate is present in another term in the query, one would need to use intermediate tables, as the callback only occurs at the \emph{end} of a query, and there can only be one per query.
+This simplifies the design of the datalog engine (the join engine is entirely separate from the callbacks), at the cost of the ability for a sufficiently advanced engine to better optimize such queries.
+
+\subsection{Monotonic Aggregation}
+Traditionally in datalog, your match clause may only access a fixed (though arbitrary) number of facts at the same time.
+Even counting can be difficult.
+To verify that there are at least three instances of some predicate p, you would normally write:
+\begin{verbatim}
+p(x) & p(y) & p(z) & neq(x, y) & neq(y, z) & neq(x, y)
+\end{verbatim}
+The size of this query grows as $n^2$ in the number of elements you are counting.
+
+This same difficulty occurs when encoding a dataflow or abstract interpretation algorithm into datalog.
+When two branches come together, a new fact representing the state with the meet applied needs to be generated.
+If we do this naively, simply matching on the existence of two states at that program point and generating a new one by merging, we will again go rapidly superlinear.
+
+In existing systems~\cite{doop1} this is dealt with by ensuring the state in question can be extended simply by adding more facts.
+When possible, this works nicely, but it prevents the use of things like strided intervals~\cite{vsa} or widening operators in dataflow algorithms which lack finite descending chains.
+This is because all of these situations require reasoning about a variable sized subset of the data to make their conclusion, not just a fixed window.
+
+Finally, in the case of employing an external solver, they often need to receive all the inputs up front, rather than incrementally.
+Calling out to an SMT solver will not work if your formula is stored as facts in a datalog representation; you would first have to walk them with a rule and a callback (or a rule and an external predicate in another system) to build up a viable representation and hand it off.
+The same is true even of simpler concepts, like applying Steensgaard's algorithm~\cite{steensgaard-alias} to a set of constraints - it will need all of them, or you will end up storing incremental program states in your database as well, and end up back at the $n^2$ problem.
+
+Traditionally, this is dealt with by appling a postprocessing step to the datalog computation.
+After it is done, a query is run, and the aggregation is performed by an outside-of-datalog program.
+As stated earlier though, we want all portions of the analysis to be able to trigger all others to avoid explicit phasing.
+
+Some of these specific scenarios can be worked around with tricks, but they do not apply universally and are still awkward to write.
+For example, a more clever author of the counting check might instead use a greater than operator instead of not-equals, assuming that field is ordered.
+The resulting query would then only be linear in the count you wanted to check against.
+However, it would still not be possible to have a variable limit to check against without significant complexity.
+
+To address these issues, we allow for predicates with aggregation.
+If a predicate is declared with aggregation, a provided meet operator will be used to aggregate submissions to each aggregate field for which all non-aggregate fields match.
+This addition allows us to address each of these issues.
+In the case of counting, we simply use set-union as our meet operator.
+For dataflow or abstract interpretations, we can have parameters like program location be non-aggregate fields, while the state is an aggregated one.
+Programs using this feature need to be aware that they may receive the aggregation of any subset of derived facts, and are only gauranteed to ever receive the aggregation at the fixpoint.
+%TODO add forwardref here for why
+
+\subsection{Hypothetical Circumscription}
+Some questions revolve more around what isn't there than what is.
+For instance, if \texttt{ud2}\footnote{
+LLVM inserts this instruction to denote unreachable code, and is intended to cause a trap if hit
+} is found in the binary, we might wish to determine if it is in fact statically unreachable.
+This requires us to be able to state that we know \emph{all} of the edges entering that basic block, not some subset.
+
+As a more concrete application, if we have an algorithm which works on the SSA representation of a function, creating an SSA representation of that function requires the entire control flow graph.
+If we add edges later, conclusions derived from the incomplete SSA form might become incorrect.
+
+Traditional datalog either disallows negation, or allows it through explicit stratification.
+In stratified negation, each predicate belongs to a ``strata''.
+The database is computed by sequentially adding the rules that have heads in each of the new strata in sequence.
+Since all the rules which could generate a particular predicate will not be used again, we can assume (using negation-as-failure) the negation of any fact not yet in the database at that point.
+
+Not all programs are written such that stratification is possible.
+Consider a graph with vertices for each predicate, and a edges for a predicate which may be derived from another predicate.
+Mark any edges for which the body-side predicate was negated as negated.
+If this graph has no cycles which include negation, then the program can be stratified.
+Contract strongly connected components on this graph to a single vertex, and then output in topographically sorted order to generate a stratification.
+
+In the context of doing program analysis on binaries, we might wish to avoid this even when reasoning purely monotonically.
+Consider an analysis which determines whether a function will never return.
+This information is important in analysis of a calling function because it should not expect control to proceed past the called function.
+To declare that a function will never return when called, we must know \emph{all} the paths within it, not just some of them.
+As a result, we are implicitly talking about knowing the negation of additional edges in the control flow graph.
+If we employed stratified negation, we would have to close over the entire control flow graph at once, leaving us unable to employ this information in the CFG definition for a calling function.
+
+To address this need, we add hypothetical circumscription.
+The core concept is that we can at need assume that a particular chunk of information is expanded, and reason forwards.
+In the event that this turns out to be false, we can retract that assumption, and reason forwards again.
+This allows us to deal with cases of negation which are not trivialy stratified.
+In the language, this feature is implemented as the ability to match on an aggregation and know your rule has received only the aggregation which will be present in the final fixpoint.
+Contrast that with the monotonic aggregation, where your rule must have correct operation for any subset of the possible aggregations along the way.
+This can be used to implement the stratified case in a straightforwards manner, and also to support dynamic negation as describe in the never-returning example above.
+
+\subsection{Call/CC}
+The astute reader may have become worried at the end of that last subsection, as it is not without reason that the standard approach to negation involves stratification.
+In the case that we have a negated inference cycle not just on predicates, as stratification prohibits, but on the actual facts, the approach as described so far would lead to alternation and indeterminacy.
+
+Interestingly, there is actually a use case for allowing negated cycles in program analysis.
+In the case of the outputs of an dataflow analysis or a control flow recovery, we will need to circumscribe over their results in order to know we have received the actual output.
+Using an incomplete run of an alias analysis, for example, would result in too-small upper bounds being used.
+However, due to the interconnectedness of these examples, the complete alias analysis information might alter the control flow graph by refining the information used to determine the target of indirect jumps.
+Changing the control flow graph would in turn invalidate the circumscribed alias analysis.
+
+Strictly looking at the system thus far, this would loop.
+Altering the control flow graph would retract the alias analysis, which would retract the alteration to the control flow graph.
+Thinking about what a human would do if they had gone down the same reasoning path points to a potential solution.
+If you had assumed you saw the totality of control flow, and from that, came to find a new control flow edge, you would assume that your initial assumption must have been wrong, and that edge really is there.
+Essentially, you would assume $(\neg P \rightarrow P) \rightarrow P$.
+
+This matches the type signature of \texttt{call/cc}, and not without reason.
+In this case, the continuation is the reasoning strategy forwards, assuming P can be determined to be true.
+If P is not determinable to be true, this continuation cannot actually be invoked, and we never go down that path.
+If P can be determined to be true, in a traditional programming language we might go down that path.
+In our case, we are constantly watching for P to be determined to be true, and if it is, we immediately take the continuation.
+
+This feature is invisible to the user other than for performance characteristics.
+The user need only specify their rules as usual, circumscribing over things which need to be complete, and if this \texttt{call/cc} condition arises, it will be automatically dealt with by reasoning forwards from the new (expanded) circumscription, after retracting relevant other derivations.
+
+\section{Informal Semantics}
+Before giving a more formal treatment of what outputs are correct for a given Holmes program, we describe how each feature functions informally, as you might see in a programmer's guide.
+Afterwards, there is a simple traced execution of a toy program which employs all of these features.
+
+\subsection{Callbacks}
 External predicates are traditionally expressed as predicates in the language, equipped with modes for each field and a function which transforms from the input fields to some representation of the output fields.
 This model can add some complexity to both the inference engine and writing code in the language.
 If an external predicate is present in the match, how should it be searched?
@@ -39,13 +167,6 @@ For example, in the rule
 simple_func: p(y) <- q(x) & r(x) + func
 \end{verbatim}
 \texttt{func} would be expected to take in the value of x, and return a list of values for y.
-
-Immediately with this feature we lose gauranteed datalog termination.
-Even if the functions provided all terminate, they have the capability to produce new symbols.
-If the program does terminate however, we could translate each predicate into an incomplete representation of itself as all the inputs received and outputs generated during program execution.
-Adding this to the EDB as a predicate and rewriting from callback style to external predicate style will produce a base datalog program with the same behavior.
-%TODO prove?
-As a result, all other properties of datalog are preserved for terminating programs with external functions.
 
 \subsection{Monotonic Aggregation}
 Monotonic aggregation is defined as a property of a subset of predicate fields.
@@ -120,6 +241,107 @@ By definition of the upgrade from candidate world to world, $w \not \models \bot
 By construction of $\cac$, the accessibility relation leads only to worlds where more things are in the context, and since the only non-monotonic operation in the logic is circumscription, which is excluded at the $\models$ layer, $(w \leq w') \imp (w \models P \imp w' \models P)$.
 
 \subsection{call/cc}
-
+\section{Formal Semantics}
+\subsection{Progress Theorem}
 \section{Implementation}
-\section{Benchmarks and Evaluation}
+In order to evaluate the language as a means towards program analysis, we need a running implementation.
+\subsection{Holmes (Old Implementation)}
+Initially, I produced a database backed implementation which compiled down to a combination of Rust and SQL (initially C++ and SQL) and had Postgres handle the business of joins, deduplication, and data storage.
+This had the advantage of being able to handle significantly larger working sets in theory, but in practice had significant performance issues which lead me to change approaches.
+Despite this, I feel it is worth discussing here both because the failures of the implementation point out some of the unique challenges and simplifications that can be made in evaluating datalog, but also because it seems inevitable that to analyze programs substantially larger than those examined in this thesis, either a distributed platform or a disk-backed system will need to be used.
+It is my hope that these lessons learned will help a future external-database based implementor avoid the same pitfalls.
+Most of the details here are focused on Postgres, but other systems take a generally similar approach so similar problems are likely to occur.
+
+As a result, this section is mostly focused on what went wrong, rather than on how the system was constructed.
+If you want to see how the system was constructed, source is 
+\href{https://github.com/maurer/holmes}{available},
+but be aware that it does not represent a complete implementation of the language.
+In particular, it only has partial support for aggregation, and no support for circumscription.
+
+\subsubsection{Indices}
+% Which indexes to make?
+%TODO cite postgres/mysql/mssql?
+Database software usually does not know which indices would be ideal to keep, and since keeping extra indices is is expensive in both time and disk, most SQL systems require the user to specify the indices to keep manually.
+Work is ongoing~\cite{peloton} to remedy this problem, but is not yet a production tool.
+In the meantime, if we wish our translated datalog queries to run efficiently, the database must be provided with a list of indices to keep.
+
+I tried a number of heuristics, including indexing in a global attribute ordering, indexing per query based on left-to-right joins, and just indexing all fields in order, and having the programmer reorder fields to boost performance.
+None of these approaches worked in practice.
+Both the global ordering and the left-to-right joins failed in large part because the query planner would choose to reorder the joins at runtime in multiple different ways.
+The programmer manually ordering fields could find local optima, but because predicates are used in multiple ways, it too falls short.
+
+The solution in use at the time this approach was switched away from was to annotate the program with an explicit set of indexes to keep.
+I generated these indices by profiling the running program, and adding indices which would allow the query planner to avoid nested loops or full table scans where possible.
+
+\subsubsection{Append-Only, High Write}
+% Append only workload
+One interesting aspect of a datalog system that the workload is entirely append-only other than retraction events, which are intended to be rare.
+This knowledge is unused by the database in executing queries.
+If it materializes a view to execute a query, and an underlying table is updated to by an append, it will re-materialize the whole view, not perform any kind of incremental maintenance.
+
+One of the expensive parts of many queries was insisting that it only return results which contained at least one \emph{new} fact - one which hadn't been returned in this query before.
+That tables can only be appended to could enable the incremental maintenance of the join, allowing more efficient computation of the join, and retrieval of only the new data.
+
+There are also some database schemas (such as the star schema) which become more possible in the absence of mutation or deletion.
+\subsubsection{Query Planning}
+Query planning, while of benefit to users who do not know all their SQL ahead of time, or whose tables remain in steady states, was the biggest issue with this approach.
+Databases commonly use a component called a query planner to translate SQL statements into an internal representation (loops, merge joins, hash joins, index walks, etc) that they can concretely execute.
+This component depends on a variety of information, including but not limited to:
+\begin{itemize}
+	\item Whether the statement was prepared
+	\item If prepared, how many times it has been executed
+	\item What indices are available
+	\item Information from the statistics daemon
+\end{itemize}
+Other than examinining what indices are available, these conditions turn out to be highly anti-productive for a datalog workload.
+
+The statistics daemon is designed with the assumption that there is a sort of ``steady state'' for a database, in which the relative sizes of the tables will remain similar.
+This makes sense for usual customers of databases, but in our case, a large part of operation looks like heavy insert activity on a specific table.
+As a result, the statistics daemon's information is generally woefully out of date.
+
+We prepare virtually all statements, since we intend to execute them repeatedly and want to avoid time in the parser.
+However, as of the time this system was developed, postgres would ossify the query plan as of the 5th time a prepared statement was executed.
+This was done based on the assumptions that SQL connections do not live so long that the database changes a lot, so by the fifth time the query is run, the plan is unlikely to be improved, and performance will be increased by avoiding the planner entirely.
+In practice, this means that any recursive rule (like one marking nodes as reachable, or performing a dataflow) will run terribly.
+The rule executes five times, and during that time, the statistics daemon either has old out of date information, or even if it updates, information that the table it's reading out of is terribly small.
+The query planner then makes bad decisions based on this, then sets them in stone.
+As a result, indices sit there unused, and logarithmic operations are done linearly.
+
+If the statements are not prepared, we incur parsing and planning overhead on every query.
+While unfortunate, those costs were low in comparison to the troublesome queries.
+The true problem with completely non-prepared statements is that the query planner would rapidly change strategies, meaning that which indices are needed would change at different points in execution.
+
+Since in our case we have a fixed query set and a rapidly changing database, it would most likely make more sense to absorb the query planner into the compilation process somehow.
+Postgres did not at the time of implementation have a way for a client to provide it with an explicit query plan short of building and providing a plugin which ran said plan as a function.
+
+\subsubsection{Star Schema}
+As alluded to earlier, one benefit of an append-only workload is that star schemas are massively more useful.
+Star schemas are normally used for ``data warehousing'', a sort of large scale database where an organization's data is all loaded into a single schema before being pulled out again into smaller databases for actual processing.
+The idea is that most values are referenced rather than included directly in tables.
+Warehousing personell are largely interested in the standardization of these values and the resulting compression.
+
+In our case, a star schema is interesting both for reasons of compression, and for ease of indexing.
+Indexing an IL instruction, whether by hash or by ordering, is much slower than sorting by a tuple of integers.
+I discovered this technique after the pivot to an in-memory database, so I have no observations of its performance, but I expect it would help.
+
+\subsubsection{Large Objects}
+With an external database, the use of large objects becomes nontrivially expensive.
+If the database is local, and the bus between the program and the database shared memory, this is not a major issue.
+However, even over a local unix socket, repeated accesses to large objects can inhibit performance.
+
+This shows up in practice when dealing with binary sections and segments during lifting.
+If the lifting rule needs the segment, the architecture, and an offset into that segment to perform the lifting, this can incur several copies of the segment per instruction.
+In my sample programs, most segments were between 300k and 600k, causing this to incur a nontrivial cost.
+
+The first solution, specific to this problem, was an all-at-once chunking of the segment.
+I requested the segment from the database, then produced a 16-byte chunk (maximum length of an x86 instruction is 15 bytes) at every offset, and sent it back.
+In the future, requests would access this chunked data rather than the original.
+This resulted in a 16-17x blowup of the space to store the base binary, but as that paled in comparison to everything else it was not especially significant.
+
+The second solution was to add another extension to datalog allowing some functions to exist as special external predicates to be run database side.
+These all needed to be builtins, and while the approach was slightly more efficient, overall I no longer think the improvement warranted the complexity.
+
+If I were to address this again today, I would use a star schema database side, and implement a cache client side for fetched star objects.
+\subsection{Mycroft}
+
+\section{Benchmarks}
