--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -345,7 +345,7 @@
   title = {Datalog-Based Program Analysis with {{BES}} and {{RWL}}},
   booktitle = {Datalog {{Reloaded}}},
   publisher = {{Springer}},
-  author = {Alpuente, Mar{\'\i}a and Feli{\'u}, Marco Antonio and Joubert, Christophe and Villanueva, Alicia},
+  author = {Alpuente, Mar\'ia and Feli\'u, Marco Antonio and Joubert, Christophe and Villanueva, Alicia},
   year = {2011},
   pages = {1--20},
   file = {/home/maurer/Zotero/storage/RMZUP9TA/f50a77bff6958313b6be2df4fa4d54fcd988.pdf}
@@ -407,7 +407,7 @@
 
 @techreport{jakstab,
   title = {Static Analysis of X86 Executables},
-  institution = {{Technische Universit{\"a}t Darmstadt}},
+  institution = {{Technische Universit\"at Darmstadt}},
   author = {Kinder, Johannes},
   year = {2010},
   file = {/home/maurer/Zotero/storage/A5QT23MJ/Kinder_-_Static_Analysis_of_x86_Executables.pdf}
@@ -687,6 +687,25 @@
   month = jan,
   year = {2011},
   file = {/home/maurer/Zotero/storage/5G38TVPC/tie-ndss-2011.pdf}
+}
+
+@inproceedings{nprr,
+  title = {Worst-Case Optimal Join Algorithms},
+  booktitle = {Proceedings of the 31st {{ACM SIGMOD}}-{{SIGACT}}-{{SIGAI}} Symposium on {{Principles}} of {{Database Systems}}},
+  publisher = {{ACM}},
+  author = {Ngo, Hung Q. and Porat, Ely and R\'e, Christopher and Rudra, Atri},
+  year = {2012},
+  pages = {37--48},
+  file = {/home/maurer/Zotero/storage/JFQHPY4B/paper49.Ngo.pdf}
+}
+
+@inproceedings{agm,
+  title = {Size Bounds and Query Plans for Relational Joins},
+  abstract = {Relational joins are at the core of relational algebra, which in turn is the core of the standard database query language SQL. As their evaluation is expensive and very often dominated by the output size, it is an important task for database query optimisers to compute estimates on the size of joins and to find good execution plans for sequences of joins. We study these problems from a theoretical perspective, both in the worst-case model, and in an average-case model where the database is chosen according to a known probability distribution. In the former case, our first key observation is that the worst-case size of a query is characterised by the fractional edge cover number of its underlying hypergraph, a combinatorial parameter previously known to provide an upper bound. We complete the picture by proving a matching lower bound, and by showing that there exist queries for which the join-project plan suggested by the fractional edge cover approach may be substantially better than any join plan that does not use intermediate projections. On the other hand, we show that in the averagecase model, every join-project plan can be turned into a plan containing no projections in such a way that the expected time to evaluate the plan increases only by a constant factor independent of the size of the database. Not surprisingly, the key combinatorial parameter in this context is the maximum density of the underlying hypergraph. We show how to make effective use of this parameter to eliminate the projections.},
+  booktitle = {In {{FOCS}} (2008},
+  author = {Atserias, Albert and Grohe, Martin and Marx, D\'aniel},
+  pages = {739--748},
+  file = {/home/maurer/Zotero/storage/ZZHB6GX3/Atserias et al. - Size bounds and query plans for relational joins.pdf;/home/maurer/Zotero/storage/HD5NRXZ8/summary.html}
 }
 
 
