Partial sketch of semantics

--- a/thesis/ll.tex
+++ b/thesis/ll.tex
@@ -6,3 +6,5 @@
 \newcommand{\query}[1]{?#1}
 \newcommand{\cac}{\leadsto}
 \newcommand{\imp}{\rightarrow}
+\newcommand{\dia}{\diamond}
+\newcommand{\boks}{\square}
