--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -708,4 +708,14 @@
   file = {/home/maurer/Zotero/storage/ZZHB6GX3/Atserias et al. - Size bounds and query plans for relational joins.pdf;/home/maurer/Zotero/storage/HD5NRXZ8/summary.html}
 }
 
+@inproceedings{stable-model,
+  title = {The Stable Model Semantics for Logic Programming.},
+  volume = {88},
+  booktitle = {{{ICLP}}/{{SLP}}},
+  author = {Gelfond, Michael and Lifschitz, Vladimir},
+  year = {1988},
+  pages = {1070--1080},
+  file = {/home/maurer/Zotero/storage/DELD7PHL/Gelfond and Lifschitz - 1988 - The stable model semantics for logic programming..pdf;/home/maurer/Zotero/storage/G3PULW6U/Gelfond and Lifschitz - 1988 - The stable model semantics for logic programming..pdf}
+}
+
 
