--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -6,6 +6,7 @@
 \usepackage{todonotes}
 \usepackage{syntax}
 \usepackage{amsmath}
+\usepackage{amssymb}
 \usepackage{wasysym}
 \usepackage{subfigure}
 \usepackage{proof}
