--- a/thesis/holmes.tex
+++ b/thesis/holmes.tex
@@ -122,6 +122,7 @@ Contrast that with the monotonic aggregation, where your rule must have correct 
 This can be used to implement the stratified case in a straightforwards manner, and also to support dynamic negation as describe in the never-returning example above.
 
 \subsection{Call/CC}
+\label{sec:motive-callcc}
 The astute reader may have become worried at the end of that last subsection, as it is not without reason that the standard approach to negation involves stratification.
 In the case that we have a negated inference cycle not just on predicates, as stratification prohibits, but on the actual facts, the approach as described so far would lead to alternation and indeterminacy.
 
@@ -147,6 +148,7 @@ This feature is invisible to the user other than for performance characteristics
 The user need only specify their rules as usual, circumscribing over things which need to be complete, and if this \texttt{call/cc} condition arises, it will be automatically dealt with by reasoning forwards from the new (expanded) circumscription, after retracting relevant other derivations.
 
 \section{Informal Semantics}
+%TODO review and rewrite this whole chunk, it was written before I decided it was informal, so it mixes the formal and the informal
 Before giving a more formal treatment of what outputs are correct for a given Holmes program, we describe how each feature functions informally, as you might see in a programmer's guide.
 Afterwards, there is a simple traced execution of a toy program which employs all of these features.
 
@@ -172,11 +174,12 @@ simple_func: p(y) <- q(x) & r(x) + func
 Monotonic aggregation is defined as a property of a subset of predicate fields.
 A result is legal in a match against an aggregated predicate if there exists a specific subset of derivable facts which match via equality on all non-aggregation fields, and for whom applying the aggregation function provided to the remaining fields would produce the result.
 A result is mandatory if the selected subset is the largest possible for some indices.
-For a predicate \texttt{p(i32, i32, IntSet\^union, i64\^max)}, an attempt to match against \texttt{p(a, b, c, d)} with a database \texttt{p(1, 2, {3}, 4), p(1, 2, {4}, 3), p(1, 1, {}, 7)} would be \texttt{p(1, 2, {3, 4}, 4), p(1, 1, {}, 7)}.
+For a predicate \texttt{p(i32, i32, IntSet\^{}union, i64\^{}max)}, an attempt to match against \texttt{p(a, b, c, d)} with a database \texttt{p(1, 2, {3}, 4), p(1, 2, {4}, 3), p(1, 1, {}, 7)} would be \texttt{p(1, 2, {3, 4}, 4), p(1, 1, {}, 7)}.
 
 %TODO finish section
 %TODO: mention reason for not using a lattice initialism is that there would be a potentially infinite number of matches that produce it, so matching against a predicate with aggregation whose indices were not fully constrained by the rest of the match clause would produce an infinite number of results in the case of non-finite domains
 \subsection{Hypothetical Circumscription}
+\label{sec:inf-circ}
 Hypothetical circumscription extends monotonic aggregation by allowing the rule to receive only the largest subset.
 
 This is a form of negation.
@@ -242,7 +245,160 @@ By construction of $\cac$, the accessibility relation leads only to worlds where
 
 \subsection{call/cc}
 \section{Formal Semantics}
-\subsection{Progress Theorem}
+I give the semantics of the Holmes language in two pieces.
+The first piece is a description of which fact sets a correct implementation may output as the program result (\S~\ref{sec:allowed}).
+The second piece describes the search strategy (\S~\ref{sec:search}) which is concretely implemented by Mycroft (\S~\ref{sec:mycroft}).
+I then seek to connect the search strategy to the supported outputs, showing that the search strategy will always make progress (\S~\ref{sec:progress}), only output facts which are supported by the program (\S~\ref{sec:soundness}), and if the correct output is always finite, then the search strategy will terminate (\S~\ref{sec:term}).
+%TODO better subsec name
+\subsection{Supported Outputs}
+\label{sec:allowed}
+We begin with negation-free datalog, using minimal model approach.
+A model $M$ consists of a universe $U$, an interpretation $I$ which maps ground terms in the program to elements of the universe, and an interpretation $P$ for some predicates $P$, which are each sets containing elements of the universe $U$.
+A statement $P(x)$ is true in $M$ if $I(x) \in P$.
+%TODO is \Pi the right symbol here?
+We say $M$ is a model of a program $\Pi$ if $M$ holds true all EDB facts in $\Pi$, and for all rules whose body clauses are held true by $M$, their heads are held true by $M$ as well.
+%TODO see if I can find someone to cite for this stuff?
+$M$ is a minimal model if there are no selection of $P' \subseteq P$ (with at least one proper subset) such that a $M'$ using those predicate interpretations instead is still a model of $P$.
+To restrict ourselves to a single, canonical model, we consider only those models for whom the interpretation $I$ is the identity function - the Herbrand models.
+This interpretation provides a canonical model equivalent to the fixpoint semantics.
+
+\paragraph{Callbacks.}
+To describe callbacks, we augment the model with a set of functions representing them.
+Each callback has a type signature $f_M : [U] \rightarrow [[U]]$, where the argument represents the assignment to input arguments, and the output represents the possible assignments to output arguments.
+It is now an additional requirement for a model $M$ to model a program $\Pi$ that for any callback $f$ used in $\Pi$, $I^{-1}(f_M([I(x_0), ...,I(x_n)])) = f(x_0, ... x_n)$.
+\todo{Describe how function argument naming works/interacts. This is really just a detail, but it should be there eventually}
+Finally, when checking whether a model supports a particular rule of a program which additionally uses a callback $f$, we now say that if the body clause holds in $M$ for some substitution, then for each element of the list $f_M(u_0, ... u_n)$ where $u_i$ are taken from that substitution, the head clause holds under both the substitution described by the body clause and that described by the function.
+
+%TODO argue this statement in the infinite case.
+At this point, we still have a single canonical model, though it may now be infinite.
+\paragraph{Aggregation.}
+To be a well formed program, any meet operators used in $\Pi$ must define a lattice.
+We add to the model additionally a set of meet operators with signature $\wedge_M : (U, U) \rightarrow U$.
+For $M$ to model $\Pi$, the meet operators in $\Pi$ and $M$ must hold equal under $I$ translation, as in the callbacks section.
+For every predicate $P$ with non-aggregate fields $x_0$ through $x_m$, aggregate fields from $a_0$ through $a_n$, and meet operators $\wedge_0$ thorugh $\wedge_n$, we perform a translation on $\Pi$.
+Augment $\Pi$ with the rule
+\[P(x_0, ..., x_m, \wedge_0(a_0, b_0), \wedge_n(a_n, b_n)) \leftarrow P(x_0, ..., x_m, a_0, ..., a_n) \& P(x_0, ..., x_m, b_0, ..., b_n)\]
+Now $M$ can be checked against our translated program in the same way as before.
+
+The above only forms the upper bounds of what programmers are allowed to expect however.
+As aggregation is primarily intended as a performance feature, we need to perform further translation in order to loosen the restrictions to allow use of only the biggest aggregation by the evaluation engine.
+%TODO check ordering, meet-join nomenclature, etc
+We split each aggregated predicate $P$ into two versions, $P$ and $P'$.
+Other than in the augmented rule, anywhere $P$ is used in the body position, it is translated to $P'$.
+We add an additional predicate, $P_a$.
+$P_a$ is not allowed to be subset for purposes of minimality checking, and represents the choice available to the engine in aggregation disclosure.
+We now add the rule
+\[P'(\vec{x}, \vec{a}) \leftarrow P(\vec{x}, \vec{a}) \& P_a(\vec{x}, \vec{a})\]
+This effectively allows the model to pick and choose any subset of $P$ to promote to $P'$.
+
+Finally, we must insist that the biggest $\vec{a}$ for each $\vec{x}$ in $P$ be promoted. 
+%TODO turn this into a rule rather than a restriction.
+We define $x \leq_i y$ to be $x \wedge_i y = y$ as a shorthand.
+We define $\vec{a} \leq \vec{b}$ to be $a_0 \leq_0 b_0 \& ... \& a_n \leq_n b_n$
+For this, rather than add logical rules to $\Pi$, we add the constraint for each $P$,
+\[
+	\forall \vec{x}, \vec{b} | P(\vec{x}, \vec{b}). \exists \vec{a} P'(\vec{x}, \vec{a}) \& \vec{b} \leq \vec{a}
+\]
+
+We now have multiple legal minimal models, since we added the element of choice to the engine by allowing it to selectively parts of the aggregation.
+\paragraph{Circumscription.}
+Before we define circumscription in the general case, we will first give a description of it in the case without aggregation or functions, e.g. as an addition to base datalog.
+In addition to base datalog rules, we now allow negated predicate terms to occur in the body of rules.
+We also allow negated EDB predicates (i.e. fully ground) in our programs.
+
+We extend the minimal model definition of datalog to deal with these modifications.
+Before checking a model against a program, we augment it with a rule for every predicate of the form
+\[
+	\bot \leftarrow P(\vec{x}) \& \neg P(\vec{x})
+\]
+If we see $\neg P$ in the body of the rule, it matches iff $\neg P$ is presnet in the EDB.
+Note that negated facts cannot be generated in the IDB under these rules.
+We then check the model as usual, with the additional constraint that if the predicate $\bot$ is populated, the model is rejected.
+We identify the canonical model as the Herbrand minimal model corresponding to the above.
+
+We now develop a kripke structure.
+The set of worlds is the set of programs as described above which have a canonical model.
+%TODO do I need to rule out reflexivity here? Mandate it? I forget.
+For a program $\Pi$ and $\Pi'$, we define the accessibility relation to be: $\Pi \leq Pi'$ iff both the EDB and the rules of $\Pi$ are $\subseteq$ those in $\Pi'$.
+For base (non-modal) formulae, we say $\Pi \models P$ iff the canonical model of $\Pi$ contains $P$.
+We say $\Pi \models \boks P$ iff $\forall \Pi' | \Pi \leq \Pi'. \Pi' \models P$.
+We say $\Pi \models \dia P$ iff $\exists \Pi' | \Pi \leq \Pi'. \Pi' \models P$.
+
+We say that a formula $P$ is ``final'' if $\Pi \models \dia \boks P$.
+We say that a formula $P$ is ``universal'' if $\Pi \models \boks \dia \boks P$.
+
+In an ideal world, the output of our engine on this would take the form of a classifier for which non-modal formulae are universal.
+I have not found an efficient way to compute this set.
+%TODO add section to mycroft on why we don't do universal formula, forward reference.
+As an approximation, we instead examine a locally-largest set of non-negated coherent \emph{final} facts.
+This can be thought of in general as the non-negated portion of the model at some accessible world from the input program, such that no more useful assumptions can be made.
+More specifically, we define the output the non-negated portion of a model $M$ for $\Pi'$, where $\Pi \leq \Pi'$, such that $\not \exists \Pi'' \geq \Pi'. \Pi'' \models P \& \Pi' \not \models P$, where $P$ is a non-negated fact.
+
+Our kripke structure is reflexive and transitive, placing it in S4 (preorder).
+For ``well behaved'' programs, as described in \S~\ref{sec:inf-circ}, we also follow G (convergence), placing us in S4.2, directed preorder.
+This corresponds to the situation where all final facts are universal, giving rise to our approximation of having the engine output final facts for a particular world.
+I do not have an efficient way to check for G in the general case.
+\todo{Can I say something stronger? I think it may not be possible to compute whether G holds in the general case without first computing at least one final world.}
+
+This formulation is directly related to stable model semantics~\cite{stable-model}.
+\todo{Would it be useful to make this connection more formal?}
+Specifically, the selection of negated assumptions with which to extend $\Pi$ is isomorphic to the preselection of a stable set.
+\todo{Is it really? Does stable set permit the equivalent of positive assumptions?}
+Said stable set adds to the program the negation of everything not in the set by rewriting the rules to either drop negated rules which may not match, or drop clauses from negated rules which are now known to match.
+In our case, the kripke structure both makes our search procedure easier, and will make it easier to avoid the possibility that a program with no negation in its EDB has no legal output model (via call-cc).
+\todo{Mention connection to autoepistemic expansions?}
+
+\todo{Describe how it works with real circumscription}
+%Real circumscription:
+%Assumptions now take the form of an additional rule which says "If there is a \vec{a} for this \vec{x} that is bigger than mine, produce \bot
+% Will need to rewrite previous "addl restriction" into a rule transformation for this.
+\paragraph{call/cc}
+The major difference between this approach to negation and the stable-set approach is our addition of call/cc.
+In the stable-set approach, $\neg A \rightarrow A$ has no stable model.
+If $A$ is not in the set, $A$ is required for it to become a Herbrand model.
+If $A$ is in the set, $A$ is not required to be present, so while it is a Herbrand model, it is not the minimal one.
+In our case, per the motivation (\S~\ref{sec:motive-callcc}), we would prefer that this scenario resolve to $A$.
+Essentially, with call/cc we attempt to provide a way to produce a meaningful set even when the system itself is unstable.
+
+As with circumscription, we will first describe this modification without the prior features, then extend it to work with them.
+We assume negation works as in the first half or the circumscription section.
+%TODO continue from here
+
+\paragraph{Summary}
+Model Components:
+\begin{itemize}
+	\item Universe, $U$ (model native identifiers for values placed in fields)
+	\item Interpretation, $I$, $I^{-1}$ (function mapping between original program and the universe)
+	\item Predicates, $P$ (membership of $u \in U$ for $P$ denotes $P(I(u))$ in the output)
+	\item Callbacks, $f_M$ (callbacks from the original program, translated by $I$)
+	\item Meets, $\wedge$ (meets from the original program, translated by $I$)
+	\item Aggregation Choices, $P_a$ (sets indicating which aggregations the model chose to reveal)
+	\item Assumptions, $\Pi' - \Pi$ (Aggregated facts which are assumed to have no element above them)
+\end{itemize}
+Verification procedure:
+
+\subsection{Search Procedure}
+\label{sec:search}
+\subsection{Progress}
+\label{sec:progress}
+Here, we define progress for the search strategy to mean that we will never repeat a state.
+\subsection{Soundness}
+\label{sec:soundness}
+%TODO xref terminal worlds, make sure predefined
+Soundness here means that if the search strategy terminates, we will output a set of facts consistent with the semantics of the program at one of the terminal worlds.
+\subsection{Termination}
+\label{sec:term} 
+Our termination property refers to the notion that if the program has only finite sets in its correct outputs, we will eventually reach one of those sets.
+Initially, this might seem to come freely from progress and soundness.
+If we never repeat a state and the outputs (and so the number of sound facts) are finite, shouldn't we always terminate, since we are evolving through a finite set of states without repetition?
+Unfortunately, this is not quite enough.
+We also need to ensure that the search strategy also guards against infinite evolutions in worlds which are not present on the kripke structure (e.g. are for one reason or another not a valid world).
+First, we will show, as in the supposition above, that we spend a finite amount of time progressing through worlds which are present on the kripke structure defined by the program.
+Secondly, we will demonstrate that digressions from this tree are finite in length - that is, we will discover an invalid branch choice in finite time.
+Finally, we will show that there are a finite number of ways to leave the kripke structure in the search procedure. 
+If we spend finite time on kripke structure, make a finite number of departures for it, and each of those lasts for a finite amount of time, we will eventually terminate.
+
+%TODO actual proof, this is just an outline above
 \section{Implementation}
 In order to evaluate the language as a means towards program analysis, we need a running implementation.
 \subsection{Holmes (Old Implementation)}
@@ -313,6 +469,7 @@ Since in our case we have a fixed query set and a rapidly changing database, it 
 Postgres did not at the time of implementation have a way for a client to provide it with an explicit query plan short of building and providing a plugin which ran said plan as a function.
 
 \subsubsection{Star Schema}
+%TODO: note that this is equivalent to picking a good $I$ for our model, finding it, then swapping it back to Herbrand at the end
 As alluded to earlier, one benefit of an append-only workload is that star schemas are massively more useful.
 Star schemas are normally used for ``data warehousing'', a sort of large scale database where an organization's data is all loaded into a single schema before being pulled out again into smaller databases for actual processing.
 The idea is that most values are referenced rather than included directly in tables.
@@ -342,6 +499,7 @@ These all needed to be builtins, and while the approach was slightly more effici
 If I were to address this again today, I would use a star schema database side, and implement a cache client side for fetched star objects.
 
 \subsection{Mycroft}
+\label{sec:mycroft}
 Mycroft is a row-oriented, single-threaded, in-memory datalog engine, taking into account the experiences of the initial implementation.
 It operates as a macro which transforms datalog into Rust code, which can then be compiled into a running program.
 In its current form, it addresses most, though not all, of the pain points encountered with Postgres.
@@ -449,13 +607,28 @@ If the current retracted item is a fact, it also retracts any aggregate IDs whic
 In the special case where the tuple just inserted was also retracted, we replace its justification with one referencing the members of its now broken aggregate ID.
 This ensures that while this justification no longer cares about the expansion of the circumscription, it will still be properly retracted if one of the facts in the original aggregate becomes invalid.
 
+%TODO explain how we deal with cyclically supported facts
+% e.g. \neg B -> A; A -> A; discover B, how do we ensure we retract A?
+% Also explain how this works in the presence of circumscription.
+
 \subsubsection{Future Work}
-% Index reduction
-% LFTJ, tetris join
-% Autotabling
-% Threading
-% Disk backed datastore
-% Cow backed storage
-% Disk backed tuplestore/indices
-% Distribution
+There is plenty of room for improvement in the concrete implementation of the language engine.
+
+Currently, we keep more indices than are strictly necessary.
+Even with our current join strategy, the count of indices kept scould be reduced through a mechanism to match attribute ordering between queries more frequently.
+With a more modern join like tetris join~\cite{tetris} it could even be possible to keep a single index per predicate.
+
+Results of some subjoins get used repeatedly, and can be known not to change through topological sorting.
+Currently, this is exploited through manual tabling - the creation of dummy predicates to keep the completed join as a realized structure.
+However, it should be generate these temporary structures automatically in some cases.
+
+Pivoting indices from a simple in-memory btree to a MVCC-style structure would allow multiple worker threads to be evaluating rules at the same time.
+As modern systems generally have additional cores, this should lead to performance improvements overall (though degradation in bottlneck phases).
+This approach also meshes well with optionally backing some data structures with disk due to either large size or low traffic.
+Many MVCC trees are already designed as on-disk data structures due to their use in traditional RDBMS systems.
+Allowing some data to reside on disk would increase the maximum size of analysis the system could perform on a single binary, or allow for easier multi-binary analysis.
+
+In an ideal world, this system could even be distributed.
+Other than circumscription and the decision to terminate, every component of this system can operate safely with a partial knowledge of the database.
+As a result, it seems plausible that with appropriate heuristics for shuffling and synchronization around circumscription, this language could be well suited for distributed execution.
 \section{Benchmarks}
